# robotics-final

./: README.md  frames_2026-01-28_04.01.17.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/farm_robot_bringup/share/farm_robot_bringup/: package.bash  package.sh  package.zsh
install/farm_robot_bringup/share/farm_robot_bringup/launch/: bringup.launch.py
install/farm_robot_description/lib/farm_robot_description/: delete_entity.py
install/farm_robot_description/share/farm_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/farm_robot_description/share/farm_robot_description/cmake/: farm_robot_descriptionConfig-version.cmake  farm_robot_descriptionConfig.cmake
install/farm_robot_description/share/farm_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/farm_robot_description/share/farm_robot_description/launch/: bringup_gazebo.launch.py
install/farm_robot_navigation/lib/farm_robot_navigation/: monitor_farm.py  navigate_row.py
install/farm_robot_navigation/share/farm_robot_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/farm_robot_navigation/share/farm_robot_navigation/cmake/: farm_robot_navigationConfig-version.cmake  farm_robot_navigationConfig.cmake
install/farm_robot_navigation/share/farm_robot_navigation/config/: nav2_params.yaml
install/farm_robot_navigation/share/farm_robot_navigation/environment/: ament_prefix_path.dsv  path.dsv
install/farm_robot_navigation/share/farm_robot_navigation/launch/: navigation.launch.py
install/farm_robot_perception/share/farm_robot_perception/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/farm_robot_bringup/: package.xml  setup.cfg  setup.py
src/farm_robot_description/: CMakeLists.txt  package.xml
src/farm_robot_description/launch/: bringup_gazebo.launch.py
src/farm_robot_description/scripts/: delete_entity.py  generate_world.py
src/farm_robot_description/urdf/: farm_bot.xacro
src/farm_robot_description/worlds/: farm.world
src/farm_robot_navigation/: CMakeLists.txt
src/farm_robot_navigation/config/: nav2_params.yaml
src/farm_robot_navigation/launch/: navigation.launch.py
src/farm_robot_navigation/scripts/: monitor_farm.py  navigate_row.py
src/farm_robot_perception/: setup.cfg  setup.py
src/farm_robot_perception/launch/: perception.launch.py
src/farm_robot_perception/scripts/: check_camera.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+34 files in other folders)
