<?xml version="1.0"?>
<package format="3">
  <name>farm_robot_bringup</name>
  <version>0.1.0</version>
  <description>System bringup for farm robot (Gazebo, Nav2, Perception).</description>
  <maintainer email="rutha@example.com">rutha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>farm_robot_description</exec_depend>
  <exec_depend>farm_robot_navigation</exec_depend>
  <exec_depend>farm_robot_perception</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
