<?xml version="1.0"?>
<package format="3">
  <name>farm_robot_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and Gazebo world for the farm robot.</description>
  <maintainer email="rutha@example.com">rutha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>xacro</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
