<?xml version="1.0"?>
<package format="3">
  <name>farm_robot_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 configuration and launch for farm robot.</description>
  <maintainer email="rutha@example.com">rutha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
