<?xml version="1.0"?>
<package format="3">
  <name>farm_robot_perception</name>
  <version>0.1.0</version>
  <description>OpenCV-based crop stress detection node.</description>
  <maintainer email="rutha@example.com">rutha</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
